--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Document</title>
+    <title>SPINNER</title>
 </head>
 <body>
-    <div>
+    <div id= "container">
         <canvas id="canvas" class="start"></canvas>
-    </div>
-    <div>
-        <button id="startButton">START</button><button id="restartButton">RESTART</button>
+        <menu id= "controls">
+        </menu>
     </div>
 
+
+    <div id="buttons">
+        <button id="startButton">START</button>
+        <button id="restartButton">BACK TO MENU</button>
+    </div>
 
 
 
